[package]
name = "stop-piracy-shield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15"
uuid = { version = "1.7.0", features = ["v4"] }
