[package]
name = "stop-piracy-shield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15"
rocket = { version = "0.5.0", features = ["json"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
